--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,24 +1,7 @@
 ---
-import { type APISpaceXResponse } from "../types/api.ts";
 import CardLaunch from "./CardLaunch.astro";
-
-const response = await fetch("https://api.spacexdata.com/v5/launches/query", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json",
-  },
-  body: JSON.stringify({
-    query: {},
-    options: {
-      sort: {
-        date_unix: "asc",
-      },
-      limit: 12,
-    },
-  }),
-});
-const { docs: launches } = (await response.json()) as APISpaceXResponse;
-console.log(launches);
+import { getLatestLaunches } from "../services/api";
+const launches = await getLatestLaunches();
 ---
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
